# packetize

./: '  .gitmodules  Cargo.toml  README.md
.github/workflows/: benchmark.yml
benches/: bench.rs  stream.rs  var_int.rs  vec.rs
examples/: example.rs
impl/: Cargo.toml
impl/src/: lib.rs  packetize.rs  packetizer.rs
src/: arrayvec.rs  fast_collections.rs  impls.rs  lib.rs  nonmax.rs  stream.rs  traits.rs  uuid.rs  var_int.rs
tests/: expanded.rs  not_expanded.rs  stream.rs  stream2.rs  stream3.rs  temp.rs
