[package]
name = "packetize"
version.workspace = true  
edition.workspace = true
author.workspace = true 
description.workspace = true
repository.workspace = true 
license.workspace = true
keywords = ["packet"]
readme = "./README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[workspace]
members = ["impl"]

[workspace.package]
version = "0.62.0"
description = "Efficiently encode and decode your struct"
edition = "2021"
author = "Bruce0203 <brucefreedy@gmail.com>"
repository = "https://github.com/Bruce0203/packetize"
license = "MIT"

[dependencies]
packetize_derive = { path = "./impl", version = "0.62.0" }
integer-encoding = "4.0.0"
uuid = { version = "1.10.0", features = ["v4"], optional = true }
nonmax = { version = "0.5.5", optional = true }
arrayvec = { version = "0.7.4", optional = true }
fastbuf = "0.14.0"

[features]
default = ["uuid", "stream", "nonmax", "arrayvec"]
uuid = ["dep:uuid"]
stream = ["packetize_derive/stream"]
nonmax = ["dep:nonmax"]
minecraft = []
arrayvec = ["dep:arrayvec"]

[[bench]]
name = "var_int"
harness = false

[dev-dependencies]
rand = "0.8.5"
divan = "0.1.14"

[profile.bench]
lto = true
