[package]
name = "packetize"
version.workspace = true  
edition.workspace = true
author.workspace = true 
description.workspace = true
repository.workspace = true 
license.workspace = true
keywords = ["packet"]
readme = "./README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[workspace]
members = ["impl"]

[workspace.package]
version = "0.101.0"
description = "encode and decode your packet with stream channel"
edition = "2021"
author = "Bruce0203 <brucefreedy@gmail.com>"
repository = "https://github.com/Bruce0203/packetize"
license = "MIT"

[dependencies]
packetize_derive = { path = "./impl", version = "0.101.0" }
serde = "1.0.215"
serialization = "0.2.2"

[features]
default = ["std"]
std = ["packetize_derive/std"]
serialization = ["packetize_derive/serialization"]

[[bench]]
name = "bench"
harness = false

[dev-dependencies]
rand = "0.8.5"
divan = "0.1.14"

[profile.bench]
lto = true

